--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </footer>
     <script>
         function dropDown(){
-            var humburger =  document.getElementById("nav")
+            var humburger =  document.getElementById("nav");
             if ( humburger.className == "nav"){
                 humburger.className += "drop"
             }
